--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,8 @@ body {
   border-radius: 10px;
   background: rgba(71, 61, 59, 0.39);
   backdrop-filter: blur(2.4000000953674316px);
-  padding-top: 10px;
+  margin-top: 10px;
+  padding: 10px 20px;
 }
 
 .navbar h1 {
